$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-16 (opened May 11, 2012)

	* update.nullmodel: explicit assignment is required to update
	the input object (nm <- update(nm, ...)).

Version 2.1-15 (closed May 11, 2012)

	* rrarefy, drarefy: check the data are integers -- the functions
	do not give sensible results with real values.

	* monoMDS: checks now that there is a sufficient number of non-NA
	dissimilarities for the analysis. People really try to use NMDS
	with too small data sets. The change was triggered by a user who
	had tried to find a six-dimensional solution for seven points
	(21 dissimilarities, 42 scores) using 100,000 random starts in
	metaMDS. With over-defined models there is an infinite number of
	different solutions with nearly zero stress, and no convergence is
	found. 

	* ordiplot3d: function returns the projected coordinates of the
	origin, and function envfit.convert() that can project a
	three-dimensional envfit() result to the current plot. Unlike
	originally assumed, the function will not set equal aspect ratio
	for all axes.  We try to compensate this by setting equal scaling
	to all axes.
	
Version 2.1-14 (opened March 9, 2012)

	* Opened a new version with the CRAN release of vegan 2.0-3 on
	March 3, 2012.

	* Warton, Wright & Wang (Methods Ecol Evol 3, 89-101; 2012) had a
	paper where the analysed the confusion of location (differences
	between groups) and dispersion (variability within groups) in
	dissimilarity-based analyses.  We have warned on this for long in
	vegan, but now we can get support from this paper. Explicit
	arnings added to anosim, mrpp, simper (where this is worst) and
	adonis (where this was already analysed by Marti Anderson when
	introducing the method).

	* adipart, multipart, hiersimu: permutation tests assumed constant
	full gamma diversity in all simulations even when the null model
	could produce variable gamma diversities. The default method